fix btn-wrap display

--- a/style.css
+++ b/style.css
@@ -3309,7 +3309,9 @@ ol li:before {
 	display: block;
 	text-align: center;
 }
-
+.mob.btns-wrap{
+	display: none;
+}
 /*               Single product pag STYLE        */
 .single-product .wrap {
     padding: 0;
